--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@radix-ui/react-dialog": "^1.0.0",
     "next": "12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.4.0"
   },
   "devDependencies": {
     "eslint": "8.24.0",
