--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "react-multi-carousel": "^2.8.2",
+    "react-responsive-carousel": "^3.2.23"
   },
   "devDependencies": {
     "eslint": "8.24.0",
